--- a/Подсказка.md
+++ b/Подсказка.md
@@ -1,5 +1,7 @@
 
-## Язык программирования Артель 
+## Пример программы на языке Артель
+
+![Программа](readme.jpg?raw=true)
 
 Для разработки и запуска программ на языке Артель требуются:
 
@@ -7,4 +9,3 @@
 - Visual Studio Code 1.82+ ([ссылка](https://code.visualstudio.com/)).
 - Расширение Артель для VS Code 0.4.200+ ([ссылка](https://marketplace.visualstudio.com/items?itemName=nezaboodka.artel-vscode))
 
-![Программа](readme.jpg?raw=true)
